; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_varasm.c_unlikely_text_section.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_varasm.c_unlikely_text_section.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@cfun = common dso_local global %struct.TYPE_2__* null, align 8
@UNLIKELY_EXECUTED_TEXT_SECTION_NAME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @unlikely_text_section() #0 {
  %1 = alloca i32*, align 8
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @cfun, align 8
  %3 = icmp ne %struct.TYPE_2__* %2, null
  br i1 %3, label %4, label %16

4:                                                ; preds = %0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @cfun, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %4
  %10 = call i32 (...) @initialize_cold_section_name()
  br label %11

11:                                               ; preds = %9, %4
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @cfun, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32* @get_named_section(i32* null, i32 %14, i32 0)
  store i32* %15, i32** %1, align 8
  br label %19

16:                                               ; preds = %0
  %17 = load i32, i32* @UNLIKELY_EXECUTED_TEXT_SECTION_NAME, align 4
  %18 = call i32* @get_named_section(i32* null, i32 %17, i32 0)
  store i32* %18, i32** %1, align 8
  br label %19

19:                                               ; preds = %16, %11
  %20 = load i32*, i32** %1, align 8
  ret i32* %20
}

declare dso_local i32 @initialize_cold_section_name(...) #1

declare dso_local i32* @get_named_section(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
